-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5
-
None
-
-
9c0604e0d (dev), dc714637d (dev), 72c06dec1 (6.5)
-
2023wk02FOQtforAndroid, 2023wk04FOQtforAndroid
The camera active property changes all the time (during camera work). Problem can be reproduced with code below:
import QtQuick import QtQuick.Controls import QtMultimedia Window { width: 640 height: 480 visible: true CaptureSession{ camera: Camera{ id: camera onActiveChanged: { console.log("camera.active CHANGED!!!"); } } videoOutput: video } VideoOutput{ id: video width: parent.width anchors.top: parent.top anchors.bottom: txt.top } Row { id: txt anchors.bottom: parent.bottom Text { text: " CAMERA STATUS: " } Text { text: camera.active ? "ACTIVE" : "NOT ACTIVE" } } }
BUG-110317.mp4 attached with reproduction.
The active property should be set to True during the work of camera and do change all the time
- relates to
-
QTBUG-99098 Android tst_QMediaCaptureSession test failed
-
- Closed
-
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-110317 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
455139,3 | Android: don't change Camera State for each frame | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
465788,2 | Android: don't change Camera State for each frame | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
465789,1 | Android: don't change Camera State for each frame | 6.5.0 | qt/qtmultimedia | Status: ABANDONED | +1 | 0 |